tests/suite/fail/generated/borrow/fail_move_eat_name.ny
fn eat(x: string) -> void { print(x) }
fn main() {
    let name = "hello"
    eat(name)
    print(name) //~ ERROR was moved
}
